[build-system]
requires = ["poetry-core>=2.2,<3"]
build-backend = "poetry.core.masonry.api"

[project]
name = "pychip8"
version = "0.0.0"
description = "Chip-8 emulator written in Python"
authors = [
    {name = "Eduardo Klosowski", email = "eduardo_klosowski@yahoo.com"},
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "pysdl2 >=0.9,<0.10",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console :: Curses",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Interpreters",
    "Topic :: System :: Emulators",
    "Typing :: Typed",
    "Private :: Do Not Upload",
]

[project.urls]
repository = "https://github.com/eduardoklosowski/pychip8"
releasenotes = "https://github.com/eduardoklosowski/pychip8/releases"

[project.scripts]
pychip8 = "pychip8.cli:main"

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
]
lint = [
    "ruff >=0.14,<0.15",
    "mypy >=1.19,<1.20",
]
test = [
    "pytest >=9.0,<9.1",
    "pytest-cov >=7.0,<7.1",
]

[tool.ruff]
target-version = "py310"
line-length = 119
src = ["src", "tests"]

[tool.ruff.format]
line-ending = "lf"
quote-style = "single"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "FBT", "COM812", "EM", "ISC001", "PLR0913", "TRY003"]

[tool.ruff.lint.per-file-ignores]
"src/pychip8/core.py" = ["PLR2004"]
"tests/**/test_*.py" = ["S101", "S311", "SLF001", "PLR2004"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.mypy]
warn_unused_configs = true
show_column_numbers = true
show_error_codes = true
sqlite_cache = true
strict = true
plugins = []
files = ["src/**/*.py", "tests/**/*.py"]

[[tool.mypy.overrides]]
module = [
    "sdl2.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["src/**/__main__.py"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if (typing\\.)?TYPE_CHECKING:",
    "@overload",
    "@(abc\\.)?abstractmethod",
    "class .*\\b(typing\\.)?Protocol\\):",
    "if __name__ == '__main__':",
]
